--- a/imports/ui/body/body.html
+++ b/imports/ui/body/body.html
@@ -1,5 +1,5 @@
 <body>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
     <a class="navbar-brand" href="#">Messages App</a>
     <button
       class="navbar-toggler"
@@ -13,7 +13,14 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault"></div>
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav mr-auto"></ul>
+      {{> loginButtons align="right"}}
+    </div>
   </nav>
-  <main role="main" class="container"></main>
+  <main role="main" class="container">
+    {{#if currentUser}}
+
+    {{else}} {{> landingPage}} {{/if}}
+  </main>
 </body>
